remove bugs/, update CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,23 @@ project(loadbalancer)
 
 message("CMAKE_CXX_FLAGS is ${CMAKE_CXX_FLAGS}")
 
-add_executable(lb src/main.cpp)
+# loadbuffer
+add_executable(lb 
+	src/main.cpp
+	src/minimal_http_client.cpp)
+
+target_include_directories(lb include)
 find_package( CURL REQUIRED )
 target_link_libraries(lb httpserver CURL::libcurl)
 
-add_executable(client test_client/client.cpp)
+# client
+add_executable(client 
+	test_client/client.cpp
+	src/http_client.cpp)
+
+target_include_directories(client include)
 target_link_libraries(client CURL::libcurl)
 
+# server
 add_executable(server test_server/hello.cpp)
 target_link_libraries(server httpserver)
