--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ message("CMAKE_CXX_FLAGS is ${CMAKE_CXX_FLAGS}")
 find_package( CURL REQUIRED )
 
 # loadbuffer
-add_executable(lb src/main.cpp src/minimal_httpclient.cpp)
+add_executable(lb src/main.cpp src/minimal_httpclient.cpp src/loadbalancer.cpp)
 target_include_directories(lb PRIVATE include)
 target_link_libraries(lb httpserver CURL::libcurl)
 target_link_libraries(lb pthread)
